--- a/contact.html
+++ b/contact.html
@@ -23,24 +23,26 @@
     </div>
     <br><br>
 
-        <div style="padding: 20px; max-width: 850px; margin: auto;" class="container top" >
-            <div>
-                <h1 class="title">Contact</h1>
-                <br>
-                <br>
-                <br>
-                <h2 class="">Request a Confidential Consultation</h2>
-                <br>
-                <p>This inquiry is private and non-binding. We review every submission manually and respond with care and discretion. Your message will be seen by our founding team only.</p>
-                <br>
-                <p>You may reach out directly to our client liaison through any of the following channels. You will be notified within 24 hours.</p>
-                <br>
-                <p><strong>Contact@adelmanncybersecurity.com</strong></p>
-                <p><strong>+1 646.883.5096</strong></p>
+    <div style="padding: 20px; max-width: 850px; margin: auto;" class="container top">
+        <div>
+            <h1 class="title">Contact</h1>
+            <br>
+            <br>
+            <br>
+            <h2 class="">Request a Confidential Consultation</h2>
+            <br>
+            <p>This inquiry is private and non-binding. We review every submission manually and respond with care and
+                discretion. Your message will be seen by our founding team only.</p>
+            <br>
+            <p>You may reach out directly to our client liaison through any of the following channels. You will be
+                notified within 24 hours.</p>
+            <br>
+            <p><strong>Contact@adelmanncybersecurity.com</strong></p>
+            <p><strong>+1 646.883.5096</strong></p>
 
-            </div>
         </div>
-        <div clasC="container" style="padding: 20px; margin-top: 100px; margin-bottom: 100px;" id="contact">
+    </div>
+    <div clasC="container" style="padding: 20px; margin-top: 100px; margin-bottom: 100px;" id="contact">
         <!-- Assume this container provides centering/padding -->
         <form action="https://send.pageclip.co/KnwGzQwGBnTpx9BbJ77yQxOVAlcsme42"
             class="pageclip-form contact-form-styled" method="post">
@@ -69,12 +71,14 @@
 
             <div class="form-group">
                 <label for="request">Let us know how we can help you</label>
-                <input type="text" id="request" name="request" placeholder="I want my family's digital footprint reduced..." />
+                <input type="text" id="request" name="request"
+                    placeholder="I want my family's digital footprint reduced..." />
             </div>
 
             <div class="form-group">
                 <label for="source">How did you hear about us</label>
-                <input type="text" id="source" name="source" placeholder="Referral, Online Search, Direct Outreach..." />
+                <input type="text" id="source" name="source"
+                    placeholder="Referral, Online Search, Direct Outreach..." />
             </div>
 
             <div class="form-group">
@@ -88,4 +92,5 @@
     <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
 
 </body>
+
 </html>
