--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </div>
     </div>
-    <div class="container m20" id="threats">
+    <div class="container m20">
         <div style="margin: auto; border: solid thin #ffffff2f;  background: #00000025; backdrop-filter: blur(20px);">
             <h2 style="padding-left: 20px; padding-top: 20px;">What's In A Detail?</h2><br>
             <p style="padding: 20px; font-size: 16px;">High-net-worth families are easily one of the most underprotected
