--- a/service.html
+++ b/service.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
     <link rel="icon" type="image/png" href="./favicon.jpg?" />
-    <title>Our Services | Adelmann Cybersecurity</title>
+    <title>Adelmann Cybersecurity</title>
 </head>
 
 <body>
+    <div class="blob"></div>
     <div class="nav-outer flex">
         <div class="nav-inner">
             <a href="./index.html">HOME</a>
@@ -20,9 +21,78 @@
             <a href="./contact.html">CONTACT</a>
         </div>
     </div>
+
     <div class="container top">
-        Website Under Construction...
+        <div id="hero">
+            <h1 class="title">Our Services</h1>
+            <p
+                style="margin: auto; border: solid thin #ffffff2f; padding: 20px; background: #00000025; backdrop-filter: blur(20px);  margin: 20px; margin-bottom: 40px;">
+                We provide bespoke, digital protection based on the client needs and lifestyle. We conduct comprehensive
+                data mapping, vulnerability assessments, and rapid implementation of digital soverignty protocols.</p>
+            <div class="offerings">
+                <a href="#audit">Initial Audit</a>
+                <a href="#full-spectrum">Full Spectrum Protection</a>
+                <a href="#ongoing">Ongoing Coverage</a>
+            </div>
+
+        </div>
+
     </div>
+
+    <div class="container m20" id="audit">
+        <div style="margin: auto; border: solid thin #ffffff2f;  background: #00000025; backdrop-filter: blur(20px);">
+            <h2 style="padding-left: 20px; padding-top: 20px;">Initial Audit</h2><br>
+            <p style="padding: 20px; font-size: 16px;">Our Initial Audit reveals the full extent of your digital
+                exposure, that is, the full picture of what’s publicly known, what can be inferred, and how it could be
+                used against you by anyone with the will and means.
+                <br><br>
+                We don’t just collect data, but map the relationships between seemingly benign and unrelated facts and
+                details to form a coherent, exploitable narrative. We categorize every finding by threat level, source,
+                age, and reliability, so you understand what’s exposed, how serious it is, and what needs to happen
+                next.
+            </p>
+        </div>
+    </div>
+    <br><br>
+    <div class="container m20" id="full-spectrum">
+        <div style="margin: auto; border: solid thin #ffffff2f;  background: #00000025; backdrop-filter: blur(20px);">
+            <h2 style="padding-left: 20px; padding-top: 20px;">Full-Spectrum Protection</h2><br>
+            <p style="padding: 20px; font-size: 16px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+                aperiam corporis cum natus in atque perferendis animi ab ea earum maxime ad deserunt, sunt accusantium
+                error consectetur laboriosam esse reiciendis.
+                <br><br>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium sit, hic sint pariatur veritatis
+                asperiores esse facilis error unde quos ullam dolore est voluptas quod cupiditate iure assumenda beatae
+                molestias. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+        </div>
+    </div>
+    <br>
+    <br>
+    <div class="container m20" id="ongoing">
+        <div style="margin: auto; border: solid thin #ffffff2f;  background: #00000025; backdrop-filter: blur(20px);">
+            <h2 style="padding-left: 20px; padding-top: 20px;">Ongoing Coverage</h2><br>
+            <p style="padding: 20px; font-size: 16px;">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Asperiores aut, quam in vel incidunt corrupti perspiciatis repellat quia hic eligendi, dolorum
+                voluptatum officiis facilis earum, sint quos est magni ipsam! Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Explicabo, magnam ipsa repellat beatae minima fugiat quas deserunt, asperiores earum
+                corrupti quos, veritatis doloribus error iste aliquid? Omnis quibusdam ipsum facilis.
+                <br><br>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum facilis possimus reprehenderit vitae
+                recusandae aperiam voluptatibus atque enim, saepe rerum facere, quidem maiores minus consequuntur!
+                Asperiores enim dicta minus voluptas.
+            </p>
+        </div>
+    </div>
+    <a href="./contact.html" class="cta-button">Schedule A Private Consultation</a>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <script src="./script.js"></script>
 </body>
 
 </html>
