--- a/service.html
+++ b/service.html
@@ -50,20 +50,119 @@
                 details to form a coherent, exploitable narrative. We categorize every finding by threat level, source,
                 age, and reliability, so you understand what’s exposed, how serious it is, and what needs to happen
                 next.
+                <br><br>
             </p>
+            <h2 style="padding-left: 20px; padding-top: 20px;">1. Comprehensive Data Mapping</h2>
+            <p style="padding: 20px; font-size: 16px;">We begin with a full forensic sweep of your personal information.
+                We identify where your data appears across people-search sites, data brokers, public records, and other
+                open-source platforms. This includes names, past and present addresses, phone numbers, emails, family
+                relationships, and any exploitable fragment of identity that contributes to your exposure.</p><br>
+
+            <h2 style="padding-left: 20px; padding-top: 20px;">2. Social Media & Professional Footprint Review</h2>
+            <p style="padding: 20px; font-size: 16px;">
+                Next, we dissect your social media presence in context. Every public post, geo-tagged photo, and
+                connections’ activity is examined. We extend this scrutiny to family members, friends, and close
+                associates, because a stray image of your child at someone else’s birthday party, or a spouse’s
+                unchecked privacy setting can quietly unravel the privacy you’ve worked to build.
+                <br><br>
+                We then audit your professional footprint, combing through bios, board listings, memberships, press
+                releases, and company affiliations to identify any overshared career details that could compromise your
+                reputation or pose security risks.
+
+            </p>
+            <br>
+            <h2 style="padding-left: 20px; padding-top: 20px;">3. Device and Platform Assessment</h2>
+            <p style="padding: 20px; font-size: 16px;">
+                Simultaneously, we gather comprehensive data on your devices and platforms. We observe the laptops you
+                use for work, the smart home devices in your living room, and the mobile apps on your entire family's
+                phones. By understanding how you interact with technology, we can tailor recommendations that
+                meaningfully protect you without disrupting your day-to-day routines at home, at work, or on the go.
+                <br><br>
+                Your digital risk isn’t limited to what’s online, it extends to how you engage with your personal
+                devices, applications, and websites.
+                <br><br>
+                We catalog the laptops you use for work, the smart home devices in your residences, and any internet
+                attached gadget you come in contact with. Knowing what each device is used for is crucial to build a
+                seamless protection plan.
+            </p>
+            <br>
+            <h2 style="padding-left: 20px; padding-top: 20px;">4. Vulnerability Assessment</h2>
+            <p style="padding: 20px; font-size: 16px;">
+                At the week’s end, you receive a prioritized vulnerability assessment. Urgent threats are front and
+                center;
+                less critical exposures are put on a clear timeline. You get a detailed report highlighting exactly what
+                we must change, why it matters, and how each step restores your control. This clarity—knowing precisely
+                where you stand translates to confidence, immediate action, and the foundation for our full-spectrum
+                protective
+                solutions.
+            </p>
+
+
         </div>
     </div>
     <br><br>
     <div class="container m20" id="full-spectrum">
         <div style="margin: auto; border: solid thin #ffffff2f;  background: #00000025; backdrop-filter: blur(20px);">
             <h2 style="padding-left: 20px; padding-top: 20px;">Full-Spectrum Protection</h2><br>
-            <p style="padding: 20px; font-size: 16px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-                aperiam corporis cum natus in atque perferendis animi ab ea earum maxime ad deserunt, sunt accusantium
-                error consectetur laboriosam esse reiciendis.
+            <p style="padding: 20px; font-size: 16px;">Only available post-audit, this engagement is a complete overhaul
+                of your digital protection and soverignty. We integrate subtle protective measures into every aspect of
+                your digital life whithout compromising your convenience.
                 <br><br>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium sit, hic sint pariatur veritatis
-                asperiores esse facilis error unde quos ullam dolore est voluptas quod cupiditate iure assumenda beatae
-                molestias. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                We clean up your digital footprint, we harden every device and operating system in the family, and we
+                upgrade or replace insecure softwares with open source alternatives. We train staff and family members
+                against common attacks.
+            </p>
+            <br>
+            <h2 style="padding-left: 20px; padding-top: 20px;">1. Digital Footprint Cleanup & Remediation</h2>
+            <p style="padding: 20px; font-size: 16px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae,
+                et? Dicta velit doloribus fugiat consequatur nobis ad quaerat cum incidunt, rem laudantium beatae, amet
+                quos ipsa, officiis soluta esse praesentium! Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Molestias modi earum saepe, laboriosam sequi tenetur, quisquam voluptatem vero pariatur distinctio quam
+                consequuntur debitis dolorem ea ipsum quos sint accusantium nam?</p><br>
+
+            <h2 style="padding-left: 20px; padding-top: 20px;">2. Image Management & Disinformation Campaign</h2>
+            <p style="padding: 20px; font-size: 16px;">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet deserunt placeat officiis consequuntur
+                eius debitis nisi reprehenderit quos quae! Veniam error assumenda at nulla natus, dolore itaque
+                reiciendis ex amet!
+                <br><br>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint odit, deleniti eum aperiam eaque magni
+                nihil ducimus accusantium vitae maxime placeat ad eveniet voluptates veritatis sed veniam totam. Sit,
+                quibusdam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil praesentium sapiente
+                molestias, eum quas non nobis sit ipsam rem ex! Nemo laudantium sed asperiores harum, laboriosam iste
+                cumque dignissimos ut.
+
+            </p>
+            <br>
+            <h2 style="padding-left: 20px; padding-top: 20px;">3. Account Hardening</h2>
+            <p style="padding: 20px; font-size: 16px;">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit, quibusdam rem quisquam obcaecati
+                odio repellat molestiae dolores, dolore voluptatum distinctio quod eaque perferendis. Facere, aliquid!
+                Rerum ratione sint assumenda eveniet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia,
+                ut commodi! Qui facere maxime, nemo eius nobis inventore explicabo!
+                <br><br>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque iusto non fuga placeat nobis eos ullam
+                incidunt deleniti ipsa delectus iste, reiciendis maiores, mollitia molestias repudiandae consequatur
+                reprehenderit, exercitationem animi.
+            </p>
+            <br>
+            <h2 style="padding-left: 20px; padding-top: 20px;">4. Hardware Fortification & Secure Configuration</h2>
+            <p style="padding: 20px; font-size: 16px;">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa fuga corporis, ad necessitatibus quos
+                pariatur eius voluptatibus voluptatum distinctio vitae eveniet quisquam. Obcaecati perferendis
+                accusantium velit quis officia fuga ad. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Similique earum et voluptatum deserunt tenetur repudiandae esse nam, quas labore aspernatur inventore
+                veniam architecto unde delectus. At praesentium quidem soluta earum.
+            </p>
+            <h2 style="padding-left: 20px; padding-top: 20px;">5. Trainings & Protective Protocols</h2>
+            <p style="padding: 20px; font-size: 16px;">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus quam qui magni, cupiditate amet
+                unde! Animi commodi, nisi quis at tenetur quibusdam tempore. Tempora iure tempore fuga voluptates est
+                autem.
+                <br><br>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis repellendus tenetur, perspiciatis
+                voluptatum impedit iusto sed, nobis, ipsa dicta quia nam velit sapiente placeat reiciendis!
+                Exercitationem qui facere assumenda consectetur.
             </p>
         </div>
     </div>
