removed some content

--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,8 @@
     <div class="nav-outer flex">
         <div class="nav-inner">
             <a href="./index.html">HOME</a>
-            <a href="./threats.html">THREATS</a>
-            <a href="./service.html">SERVICE</a>
+            <!--<a href="./threats.html">THREATS</a>
+            <a href="./service.html">SERVICE</a>-->
             <a href="./about.html">ABOUT</a>
             <a href="#contact" style="border-bottom: thin solid white;">CONTACT</a>
         </div>
