--- a/about.html
+++ b/about.html
@@ -12,11 +12,11 @@
 
 <body>
 
-     <div class="nav-outer flex">
+    <div class="nav-outer flex">
         <div class="nav-inner">
             <a href="./index.html">HOME</a>
-            <a href="./threats.html">THREATS</a>
-            <a href="./service.html">SERVICE</a>
+            <!--<a href="./threats.html">THREATS</a>
+            <a href="./service.html">SERVICE</a>-->
             <a href="./about.html" style="border-bottom: solid thin white;">ABOUT</a>
             <a href="./contact.html">CONTACT</a>
         </div>
@@ -25,53 +25,69 @@
     <div class="container top">
         <div style="padding: 20px; margin: 20px;" class="about">
 
-                
+
             <h1 class="title">Who We Are</h1>
 
             <p class="sub-heading"><strong>About Us</strong></p>
 
-            <p>We are a digital protection firm specializing in personalized, intelligence-grade security for high-net-worth individuals and families.  </p>
+            <p>We are a digital protection firm specializing in personalized, intelligence-grade security for
+                high-net-worth individuals and families. </p>
 
-            <p>We do not serve the masses. Instead, we focus on a highly selective client base whose digital footprints pose complex risks across financial, physical, and reputational domains.</p>
+            <p>We do not serve the masses. Instead, we focus on a highly selective client base whose digital footprints
+                pose complex risks across financial, physical, and reputational domains.</p>
 
-            <p>Unlike corporate security or celebrity protection, our approach is deeply human led, forensic in nature, and tailored to the unique lifestyle and vulnerabilities of each client.</p>
+            <p>Unlike corporate security or celebrity protection, our approach is deeply human led, forensic in nature,
+                and tailored to the unique lifestyle and vulnerabilities of each client.</p>
 
             <p class="sub-heading"><strong>Our Mission</strong></p>
 
-            <p>We provide bespoke, intelligence-grade digital protection to families and professionals who value true sovereignty over their legacy and data.</p>
+            <p>We provide bespoke, intelligence-grade digital protection to families and professionals who value true
+                sovereignty over their legacy and data.</p>
 
             <p class="sub-heading"><strong>Our Vision</strong></p>
 
-            <p>To set the standard in personalized cybersecurity, where high-touch service, surgical precision, and nuanced applications of open-source intelligence protect what matters most.</p>
+            <p>To set the standard in personalized cybersecurity, where high-touch service, surgical precision, and
+                nuanced applications of open-source intelligence protect what matters most.</p>
 
             <h2 style="font-size:24pt;">What We Care About</h2>
-            
+
             <p class="sub-heading"><strong>1. Trust & Discretion</strong></p>
 
-            <p>We’re in the business of trust. We protect more than your data- we safeguard your reputation, your way of life, and your peace of mind.</p>
+            <p>We’re in the business of trust. We protect more than your data- we safeguard your reputation, your way of
+                life, and your peace of mind.</p>
 
-            <p>Every engagement with our clients begins and ends with confidentiality and uncompromising integrity. When you place your trust in us, we treat it like the most valuable asset we’ll handle.</p>
+            <p>Every engagement with our clients begins and ends with confidentiality and uncompromising integrity. When
+                you place your trust in us, we treat it like the most valuable asset we’ll handle.</p>
             <br>
             <p class="sub-heading"><strong>2. Thoroughness & Surgical Precision</strong></p>
 
-            <p>We are not SaaS subscription providers or surface-level data broker removers, we draw forensic level connections.</p>
+            <p>We are not SaaS subscription providers or surface-level data broker removers, we draw forensic level
+                connections.</p>
 
-            <p>We perform every task, from mobile device hardening to social media visibility setting with surgical precision and clear intent. No loose ends.</p>
+            <p>We perform every task, from mobile device hardening to social media visibility setting with surgical
+                precision and clear intent. No loose ends.</p>
             <br>
             <p class="sub-heading"><strong>3. Personalized & Proactive Security</strong></p>
 
-            <p>There is no one-size-fits all in cybersecurity, and there never will be. We integrate everything you need and nothing you don’t.</p>
+            <p>There is no one-size-fits all in cybersecurity, and there never will be. We integrate everything you need
+                and nothing you don’t.</p>
 
-            <p>By understanding the nuances of your lifestyle, relationships, career, and ambitions, we design protection around you, anticipating vulnerabilities specific to your world.</p>
+            <p>By understanding the nuances of your lifestyle, relationships, career, and ambitions, we design
+                protection around you, anticipating vulnerabilities specific to your world.</p>
             <br>
             <p class="sub-heading"><strong>4. Data Sovereignty & Literacy</strong></p>
 
-            <p>We believe in having true ownership and control over your information- that’s knowing where it lives, who can access it, and how it can be used. To help our clients navigate their lives with discernment, we give them control that lasts.</p>
+            <p>We believe in having true ownership and control over your information- that’s knowing where it lives, who
+                can access it, and how it can be used. To help our clients navigate their lives with discernment, we
+                give them control that lasts.</p>
             <br>
             <p class="sub-heading"><strong>5. Adaptability & Seamlessness</strong></p>
 
-            <p>Technology and information are always changing. We are committed to continuous learning and adaptive innovation, allowing us to anticipate future risks and apply cutting-edge knowledge for our clients’ forward-looking protection.</p>
+            <p>Technology and information are always changing. We are committed to continuous learning and adaptive
+                innovation, allowing us to anticipate future risks and apply cutting-edge knowledge for our clients’
+                forward-looking protection.</p>
         </div>
     </div>
 </body>
+
 </html>
